--- a/Education.html
+++ b/Education.html
@@ -56,6 +56,11 @@
                 <div class="features">
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>Cybershujaa</h3>
+                        <p>Data and AI Specialist <br> May - Aug, 2025</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>WorldQuant University</h3>
                         <p>Applied Data Science Lab <br> Sep - Dec, 2024</p>
                     </section>
