--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights">
             <h2>Who am I</h2>
-            <section>
-                <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
+            <!-- <section>
+                <a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Data and AI Specialist</h2>
@@ -63,7 +63,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <section>
                 <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
