--- a/generic.html
+++ b/generic.html
@@ -70,7 +70,7 @@
 
         <section id="main" class="wrapper">
             <div class="inner">
-                <h2 class="major">Data Scientist, 10Alytics</h2>
+                <h2 class="major">Data Scientist Intern, 10Alytics</h2>
                 <span class="image fit"><img src="images/datascience1.webp" alt="" /></span>
                 <p>
                     <h3>Activities involved in include:</h3>
@@ -113,7 +113,7 @@
 
         <section id="main" class="wrapper">
             <div class="inner">
-                <h2 class="major">Data Officer (Sub-contactor - MMC Asafo), Safaricom PLC</h2>
+                <h2 class="major">Data Entry Officer (Sub-contactor - MMC Asafo), Safaricom PLC</h2>
                 <span class="image fit"><img src="images/data.png" height="300" width="300" /></span>
                 <h3>Activities involved in include:</h3>
                 <ul class="list-item">
